added Swagger of sites
